[gd_scene load_steps=10 format=2]

[ext_resource path="res://scirpts/LevelClearScreen.gd" type="Script" id=1]
[ext_resource path="res://shaders/HOLO.tres" type="Material" id=2]
[ext_resource path="res://scirpts/hello_world.gd" type="Script" id=3]
[ext_resource path="res://shaders/text.tres" type="Material" id=4]
[ext_resource path="res://fonts/Racing_32.tres" type="DynamicFont" id=5]
[ext_resource path="res://menuObjects/BackToMenuButton.tscn" type="PackedScene" id=6]
[ext_resource path="res://menuObjects/QuitButton.tscn" type="PackedScene" id=7]
[ext_resource path="res://fonts/Racing_16.tres" type="DynamicFont" id=8]

[sub_resource type="Animation" id=1]
resource_name = "fade_in"
tracks/0/type = "value"
tracks/0/path = NodePath("Menu:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="LevelClearScreen" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
modulate = Color( 1, 1, 1, 0.152941 )
material = ExtResource( 2 )
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 1024, 600 )
script = ExtResource( 3 )

[node name="Menu" type="VBoxContainer" parent="."]
margin_left = 112.0
margin_top = 48.0
margin_right = 944.0
margin_bottom = 512.0

[node name="GameOver" type="Label" parent="Menu"]
material = ExtResource( 4 )
margin_right = 832.0
margin_bottom = 42.0
custom_fonts/font = ExtResource( 5 )
text = "LEVEL CLEAR"
align = 1

[node name="CenterRow" type="HBoxContainer" parent="Menu"]
margin_top = 46.0
margin_right = 832.0
margin_bottom = 464.0
size_flags_vertical = 3

[node name="Buttons" type="VBoxContainer" parent="Menu/CenterRow"]
margin_right = 414.0
margin_bottom = 418.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 64
alignment = 1

[node name="BackButton" parent="Menu/CenterRow/Buttons" instance=ExtResource( 6 )]
visible = false
margin_top = 129.0
margin_right = 414.0
margin_bottom = 177.0

[node name="QuitButton" parent="Menu/CenterRow/Buttons" instance=ExtResource( 7 )]
visible = false
margin_top = 185.0
margin_right = 414.0
margin_bottom = 233.0

[node name="CenterContainer" type="CenterContainer" parent="Menu/CenterRow"]
margin_left = 418.0
margin_right = 832.0
margin_bottom = 418.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="NextLevel" type="Label" parent="Menu/CenterRow/CenterContainer"]
material = ExtResource( 4 )
margin_left = 119.0
margin_top = 188.0
margin_right = 295.0
margin_bottom = 230.0
custom_fonts/font = ExtResource( 5 )
text = "NEXT LEVEL: "

[node name="Label" type="Label" parent="Menu"]
visible = false
material = ExtResource( 4 )
margin_top = 419.0
margin_right = 832.0
margin_bottom = 464.0
custom_fonts/font = ExtResource( 8 )
custom_colors/font_color = Color( 0.552941, 0.239216, 0.380392, 1 )
custom_colors/font_color_shadow = Color( 0.501961, 0.113725, 0.235294, 1 )
text = "v 0.1
created by marty"

[node name="FadeIn" type="AnimationPlayer" parent="."]
anims/fade_in = SubResource( 1 )
[connection signal="pressed" from="Menu/CenterRow/Buttons/BackButton" to="Menu/CenterRow/Buttons/BackButton" method="_on_MenuButton_pressed"]
[connection signal="pressed" from="Menu/CenterRow/Buttons/QuitButton" to="Menu/CenterRow/Buttons/QuitButton" method="_on_MenuButton_pressed"]
[connection signal="animation_finished" from="FadeIn" to="." method="_on_FadeIn_animation_finished"]
